tests/invalids/invalidWhile4-1.gt
proc main ()
    int m;
begin
    while n > 1 do
        n > 2;
    od
end
